Fix stretched navbar issue in projects
Makes img{} apply to all images except navbar-logo.

Is this best practice? No idea!

--- a/css/projects-style.css
+++ b/css/projects-style.css
@@ -117,7 +117,7 @@
 
 
 
-  img{
+  img:not(#navbar-logo){
     width: 40vw;
     height: 24.75vw;
     border-radius: 8px;
